...

              appCtrl.page.value = value;
            },
            items:
                [
                  (AppIcon.home, '홈'),
                  (AppIcon.search, '탐색'),
                  (AppIcon.search, '탐색'),
                  (AppIcon.heart, '관심상품'),
                  (AppIcon.mypage, '마이페이지'),
                ].indexed.map((e) {
                  if (e.$1 == 2) {
                    return BottomNavigationBarItem(
                      icon: CircleAvatar(
                        backgroundColor: AppColor.yellow,
                        radius: 28,
...
