...
                    controller: de,
                  ),
                ),

                Padding(
                  padding: const EdgeInsets.symmetric(vertical: 16.0),
                  child: SubmitButton(label: '등록하기', onPressed: register),
                ),
              ],
            ),
          ),
        ),
      ),
...
          child: AppTextStyle.regular14(color: AppColor.whiteL1)
              .text('카메라로 촬영'),
        ),
        PopupMenuItem(
          onTap: () => select(.gallery),
          child: AppTextStyle.regular14(color: AppColor.whiteL1)
              .text('갤러리에서 선택'),
        ),
      ],
      child: Container(
        height: 200,
        decoration: BoxDecoration(
          borderRadius: .circular(12),
...
